# keri-governance

./: README.md  pyproject.toml
src/keri_governance/: __init__.py  cardinal.py  checker.py  compiler.py  evolution.py  patterns.py  primitives.py  resolver.py  schema.py  systems.py
tests/: test_cardinal.py  test_governance_compiler.py  test_governance_evolution.py  test_governance_integration.py  test_governance_patterns.py  test_governance_schema.py  test_governance_systems.py  test_governance_versioning.py  test_primitives.py
