[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keri-governance"
version = "0.1.0"
description = "KERI governance engine - constraint algebra, frameworks, cardinal rules"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Nicholas-Keystate" },
]
keywords = [
    "keri",
    "governance",
    "acdc",
    "constraint",
    "framework",
    "cardinal",
    "gaid",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/keri_governance"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
